# stack-scraper

./: -o  .env.example  .gitignore  README.md  cookies.txt  download-test.py  install-deps.sh  main.py  pyproject.toml  settings.toml  stack-scrape.py  test.py
src/: consts.py  gatherCredentials.py  webScraping.py
src/gui/: setup.py  wizard.py  wizard.tcss
src/player/: __init__.py  manager.py  video_player.py
src/scraping/: downloadLib.py  webScraping.py
stack_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: playwright_test.py
usrdata/: credentials-example.toml  credentials.toml
