[project]
name = "stack-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright>=1.58.0",
    "pyinstaller>=6.19.0",
    "textual>=8.2.3",
    "textual-dev>=1.8.0",
]

[project.scripts]
stack-scrape = "stack-scrape.py"
