[project]
name = "stack-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "camoufox>=0.4.11",
    "playwright>=1.58.0",
    "textual>=0.80",
    "toml>=0.10.2",
    "typer>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["."]
